--- a/IntroductionToParallelAlgorithms/IntroductionToParallelAlgorithms.vcxproj
+++ b/IntroductionToParallelAlgorithms/IntroductionToParallelAlgorithms.vcxproj
@@ -130,6 +130,9 @@
   <ItemGroup>
     <ClCompile Include="IntroductionToParallelAlgorithms.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="TridiagonalMatrix.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
