--- a/IntroductionToParallelAlgorithms/IntroductionToParallelAlgorithms.vcxproj
+++ b/IntroductionToParallelAlgorithms/IntroductionToParallelAlgorithms.vcxproj
@@ -105,6 +105,8 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <OpenMPSupport>true</OpenMPSupport>
+      <LanguageStandard>stdcpp17</LanguageStandard>
+      <LanguageStandard_C>stdc17</LanguageStandard_C>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -131,6 +133,7 @@
     <ClCompile Include="IntroductionToParallelAlgorithms.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="log_duration.h" />
     <ClInclude Include="TridiagonalMatrix.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
