--- a/IntroductionToParallelAlgorithms/IntroductionToParallelAlgorithms.vcxproj.filters
+++ b/IntroductionToParallelAlgorithms/IntroductionToParallelAlgorithms.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="TridiagonalMatrix.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="log_duration.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
