--- a/IntroductionToParallelAlgorithms/IntroductionToParallelAlgorithms.vcxproj
+++ b/IntroductionToParallelAlgorithms/IntroductionToParallelAlgorithms.vcxproj
@@ -121,6 +121,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <OpenMPSupport>true</OpenMPSupport>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
